nueva version2 mejorada

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Copyright © 2025 Tattoos. Todos los derechos reservados. Ver1</p>
+        <p>Copyright © 2025 Tattoos. Todos los derechos reservados. Ver2 mejorado</p>
     </footer>
 
 </body>
