--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p>Copyright © 2025 Tattoos. Todos los derechos reservados. Version3 mejorado</p>
+        <p>Copyright © 2025 Tattoos. Todos los derechos reservados. main</p>
     </footer>
 
 </body>
