--- a/nosotros.html
+++ b/nosotros.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-    <h1>Nosotros</h1>
+    <h1 class="titulo">Nosotros</h1>
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
@@ -35,7 +35,7 @@
 </header>
 <main>
 <section class="nosotros">
-    <p> Somos un estudio de tatuajes en la colonia Roma, CDMX.
+    <p> Somos un estudio de tatuajes.
 
         Nuestra misión es conectar el arte del tatuaje con ustedes en un lugar lleno de energía, generamos una experiencia inolvidable y permanente en tu piel.
         
@@ -49,6 +49,10 @@
 </section>
 
 </main>
+
+<footer class="footer">
+    <p>Copyright © 2025 Tattoos. Todos los derechos reservados.</p>
+</footer>
 
 </body>
 
