--- a/diseños.html
+++ b/diseños.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
-    
+
 </head>
+
 <body>
-    <h1>Diseños </h1>
+    <h1 class="titulo">Diseños</h1>
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
             <a href="index.html">Inicio</a>
@@ -21,22 +23,95 @@
             <a href="diseños.html">Diseños</a>
         </nav>
     </div>
-<h2>Nuestros diseños</h2>
-    <div class="grid">
-        <div class="galeria">
 
-            <a href="galeria.html">
-                <img src="../Estudio de tatuajes/tatuajes/1.jpg " width="200px" height="250px" alt="imagen tatuaje">
-                <div>
-                    <p>VueJS</p>
-                    <p>$25</p>
+    <main class="contenedor">
+        <h2>Nuestros diseños</h2>
 
-                </div>
+        <div class="grid">
+            <div class="diseños">
+                <a href="diseños.html">
+                    <img class="diseño__imagen" src="../Estudio de tatuajes/assets/1.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseño__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="diseños">
+                <a href="diseños.html">
+                    <img class="galeria__imagen" src="../Estudio de tatuajes/assets/2.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="diseños">
+                <a href="diseños.html">
+                    <img class="galeria__imagen" src="../Estudio de tatuajes/assets/3.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="diseños">
+                <a href="diseños.html">
+                    <img class="diseños__imagen" src="../Estudio de tatuajes/assets/4.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <div class="diseños">
+                <a href="diseños.html">
+                    <img class="diseños__imagen" src="../Estudio de tatuajes/assets/5.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
 
 
-            </a>
+            <div class="diseños
+        ">
+                <a href="diseños.html">
+                    <img class="diseños__imagen" src="../Estudio de tatuajes/assets/6.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="diseños">
+                <a href="diseños
+            .html">
+                    <img class="diseños__imagen" src="../Estudio de tatuajes/assets/7.jpg" width="350px" height="350px"
+                        alt="imagen tattoo">
+                    <div class="diseños__informacion">
+                        <p class="tattoo__nombre">VueJS</p>
+                        <p class="tattoo__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+
         </div>
-    </div>
-    
+    </main>
+    <footer class="footer">
+        <p>Copyright © 2025 Tattoos. Todos los derechos reservados.</p>
+    </footer>
 </body>
+
 </html>
