--- a/galeria.html
+++ b/galeria.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preload" href="css/styles.css" as="style">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
 </head>
 
 <body>
-    <h1>Galería</h1>
+    <header>
+        <h1 class="titulo">Galería</h1>
+    </header>
 
     <div class="nav-bg">
         <nav class="navegacion-principal contenedor">
@@ -39,28 +42,35 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/Estudio de tatuajes/assets/Tatuaje acuarela.jpg" class="d-block mx-auto w-25" alt="...">
+                        <img src="/Estudio de tatuajes/assets/Tatuaje acuarela.jpg" class="d-block mx-auto w-25"
+                            alt="...">
                         <div class="carousel-caption d-md-block">
-                            <h5>First slide label</h5>
+                            <h5>Tatuaje acuarela</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img src="/Estudio de tatuajes/assets/Tatuaje realista.jpg" class="d-block mx-auto w-25" alt="...">
+                        <img src="/Estudio de tatuajes/assets/Tatuaje realista.jpg" class="d-block mx-auto w-25"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
+                            <h5>Tatuaje realista</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <img src="/Estudio de tatuajes/assets/tatuaje tradicional.jpg" class="d-block mx-auto w-25" alt="...">
+                        <img src="/Estudio de tatuajes/assets/tatuaje tradicional2.jpg" class="d-block mx-auto w-25"
+                            alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
+                            <h5>Tatuaje tradicional</h5>
                             <p>Some representative placeholder content for the third slide.</p>
                         </div>
                     </div>
+
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
@@ -83,6 +93,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+
+    <footer class="footer">
+        <p>Copyright © 2025 Tattoos. Todos los derechos reservados.</p>
+    </footer>
 
 </body>
 
